--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -55,7 +55,7 @@
     opacity: 1;
     visibility: visible;
     transition: 500ms ease-in all;
-} /*# sourceMappingURL=index.css.map */
+}
 .responsi_header {
     display: none;
 }
