--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -3435,3 +3435,20 @@ a.checkout_link_guest {
 span.sign_up_for a {
     color: #eb0029;
 }
+.forget_password_txt {
+    margin-bottom: 15px;
+}
+.font-medium {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 11px;
+}
+.toggle_button {
+    position: absolute;
+    top: 0;
+    transform: translatey(50px);
+    right: 5px;
+}
+.tittle_heading.reset_pass h2 {
+    margin-bottom: -21px;
+}
