--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -543,6 +543,10 @@ li.page-item.disabled span.page-link {
             margin-bottom: 19px;
 
         }
+        form.contact_form label {
+            margin-top: 6px;
+        }
+
 @media screen and (max-width: 320px) {
     .video_dilse_play-tw .home-slider-content {
         padding: 0;
