--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -3452,7 +3452,7 @@ span.sign_up_for a {
 .tittle_heading.reset_pass h2 {
     margin-bottom: -21px;
 }
-div#deliveryCost {
+.delivery_cost_typ {
     display: flex;
     gap: 10px;
     margin-top: 10px;
