--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -547,8 +547,11 @@ li.page-item.disabled span.page-link {
             margin-top: 6px;
         }
         .contcat_text h5 {
-                  font-size: 19px;
+                  font-size: 11px;
              }
+             .cart_head h3 {
+                font-size: 20px;
+            }
 
 @media screen and (max-width: 320px) {
     .video_dilse_play-tw .home-slider-content {
