--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -552,6 +552,9 @@ li.page-item.disabled span.page-link {
              .cart_head h3 {
                 font-size: 20px;
             }
+            .payment_method {
+                display: unset;
+                       }
 
 @media screen and (max-width: 320px) {
     .video_dilse_play-tw .home-slider-content {
