--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -3457,3 +3457,7 @@ span.sign_up_for a {
     align-items: baseline;
     margin-top: 10px;
 }
+
+.swal2-styled.swal2-confirm {
+    background-color: #eb0029 !important;
+}
