--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -175,7 +175,7 @@ header.main_header {
 }
 
 .btm_header {
-    /* padding: 10px 0; */
+    padding: 10px 0;
 }
 
 .btm_header_flx {
@@ -554,7 +554,7 @@ header.main_header {
 .about_se .about_img.slick-slide img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .taste_the::before {
@@ -3476,7 +3476,7 @@ form.order_cancel {
    top: 90%;
 
 }
-.social_icons {
+.social_icons_footer {
     text-align: center;
     display: none;
 }
