--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -27,7 +27,7 @@
     top: 0px;
     width: 400px;
     background: #000;
-    height: 100%;
+    height: 100vh;
     padding-left: 20px;
     padding-top: 50px;
     opacity: 0;
@@ -578,7 +578,12 @@ li.page-item.disabled span.page-link {
                 right: 92px;
                 top: 19px;
             }
-            .social_icons {
+            .social_icons_footer ul {
+                display: flex;
+                gap: 10px;
+                                justify-content: center;
+            }
+            .social_icons_footer {
                 text-align: center;
                 display: block;
             }
@@ -590,7 +595,8 @@ li.page-item.disabled span.page-link {
             }
             .select_location {
                 padding: 12px 12px;
-                         }
+                margin-left: 18px;
+            }
                          .font-medium {
                                                 margin-bottom: 0;
                         }
