--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -599,6 +599,9 @@ li.page-item.disabled span.page-link {
     .font-medium {
         margin-bottom: 0;
     }
+    .home_slider_btn {
+        text-align: center;
+    }
 }
 @media screen and (max-width: 320px) {
     .video_dilse_play-tw .home-slider-content {
