--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -2916,7 +2916,7 @@ input[type="password"]::-ms-reveal {
     position: absolute;
     right: 0.75em;
     top: 1.25em;
-    z-index: 9;
+    z-index: 9999;
     margin: 6px 0 0 0;
     font-size: 16px;
 }
@@ -3380,10 +3380,10 @@ iframe {
     max-width: 100%;
 }
 
-.fa {
-    margin-left: -12px;
-    margin-right: 8px;
-}
+/*.fa {*/
+/*    margin-left: -12px;*/
+/*    margin-right: 8px;*/
+/*}*/
 
 .about_img img {
     border-radius: 60px;
