--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -63,7 +63,7 @@
 }
 .login_wrapper {
     background-color: #fcebb9;
-    padding-top: 0;
+    padding-top: 50px;
 }
 a.page-link {
     padding: 10px 20px;
