--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -78,6 +78,8 @@ li.page-item.disabled span.page-link {
 @media screen and (max-width: 1024px) {
     header.main_header {
         display: none;
+        top: 0;
+        z-index: 999999;
     }
     header.responsi_header {
         display: block;
@@ -86,6 +88,36 @@ li.page-item.disabled span.page-link {
         font-size: 37px;
         line-height: 53px;
     }
+    li.cart_responseive {
+        position: absolute;
+        right: 80px;
+        top: 28px;
+    }
+    li.cart_responseive a span {
+        position: absolute;
+        top: -6px;
+        right: -7px;
+        background: #fff;
+        width: 22px;
+        height: 22px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 30px;
+        color: #2f2f30;
+        font-weight: 700;
+        font-size: 14px;
+    }
+    li.cart_responseive::marker {
+        content: none;
+    }
+    .inner_bannner{
+        padding: 80px 0 80px;
+    }
+    .order_summary .tittle_heading h4 {
+        font-size: 18px;
+    }
+
 }
 @media screen and (max-width: 991px) {
     header.main_header {
@@ -331,6 +363,23 @@ li.page-item.disabled span.page-link {
     }
     .card-body {
         padding: 1rem 0rem;
+    }
+    .custm_nav_pills .d-flex {
+        flex-direction: column;
+    }
+    .custm_nav_pills .tab-content{
+        margin-left: 0;
+    }
+    .under_section-form label {
+        font-size: 14px !important;
+    }
+    form.contact_form a{
+        font-size: 14px;
+    }
+    .login_wrapper  input#remember{
+        width: 19px;
+        position: relative;
+        top: 5px;
     }
 }
 @media screen and (max-width: 480px) {
@@ -585,17 +634,13 @@ li.page-item.disabled span.page-link {
         padding: 10px 10px;
         position: relative;
         z-index: 999;
-        margin-top: 23px;
+        /* margin-top: 23px; */
     }
 
     .menu_left.menu_right.is_active li.name_drop_down {
         margin-top: -16px;
     }
-    li.cart_responseive {
-        position: absolute;
-        right: 115px;
-        top: 32px;
-    }
+
     .social_icons_footer ul {
         display: flex;
         gap: 10px;
