--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -29,7 +29,7 @@
     top: 0px;
     width: 400px;
     background: #000;
-    height: 100vh;
+    min-height: 100vh;
     padding-left: 20px;
     padding-top: 50px;
     opacity: 0;
