--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -3320,7 +3320,8 @@ section.menu_main1 .cusstom_input input,
 }
 
 #button {
-    display: inline-block;
+    /* display: inline-block; */
+    display: none;
     background-color: #eb0029;
     width: 50px;
     height: 50px;
