--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -3527,3 +3527,6 @@ div#mmce-error-response {
     font-weight: 700;
     font-size: larger;
 }
+/* div#v-pills-tab {
+    display: none !important;
+} */
