--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -220,6 +220,20 @@ li.page-item.disabled span.page-link {
     .select_location{
         margin-left: 20px;
     }
+    .taste_the .custm_nav_pills div#v-pills-tab {
+        flex-direction: column !important;
+    }
+    .taste_the .custm_nav_pills div#v-pills-tab {
+        flex-wrap: wrap;
+        display: flex;
+        flex-direction: column !important;
+    }
+
+    .taste_the .custm_nav_pills div#v-pills-tab button.nav-link {
+        flex: 1;
+        flex-wrap: wrap;
+        max-width: 100%;
+    }
 }
 @media screen and (max-width: 767px) {
     .py_8,
