--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -221,10 +221,10 @@ header.main_header {
 
 .video_dilse_play-tw .home-slider-content {
     text-align: center;
-    max-width: 820px;
+    max-width: 720px;
     margin: auto;
-    padding: 30px;
-    background: rgb(0 0 0 / 30%);
+    padding: 20px 30px;
+    background: rgb(0 0 0 / 18%);
 }
 
 .home-slider-content h3 {
@@ -234,13 +234,11 @@ header.main_header {
     margin-bottom: 6px;
 }
 
-.home-slider-content h1 {
-    text-align: center;
-    font-size: 32px !important;
-}
+
+
 
 .home-slider-content h1 {
-    font-size: 34px;
+    font-size: 22px;
     color: #fff;
     text-transform: uppercase;
     margin-bottom: 0;
@@ -2948,7 +2946,7 @@ input[type="password"]::-ms-reveal {
 }
 
 div#staticBackdrop {
-    height: unset !important;
+    /* height: unset !important; */
 }
 
 .verify_btn_email.underline {
@@ -3510,7 +3508,11 @@ form.order_cancel {
 }
 .social_icons_footer {
     text-align: center;
-    display: none;
+    /* display: none; */
+    margin-bottom: 10px;
+}
+.social_icons_footer ul li {
+    display: inline-block;
 }
 .mce_inline_error {
     color: red;
@@ -3536,6 +3538,9 @@ div#mmce-error-response {
     font-weight: 700;
     font-size: larger;
 }
-/* div#v-pills-tab {
+.product_image img {
+    width: 100%;
+}
+.Product_slider button {
     display: none !important;
-} */
+}
